--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -710,14 +710,30 @@ population size is small.
 
 % EXP1's results
 
+%\begin{figure}[htpb]
+% \begin{center}
+% \subfigure[\ELEVATORS-12]{\includegraphics[width=0.23\textwidth]{images/EXP1_Efficiency_IPC6_SEQ_ELEVATORS_12_RESTART_dae-sm_STATIC_.pdf}}
+% \hfill
+% \subfigure[\OPENSTACKS-17]{\includegraphics[width=0.23\textwidth]{images/EXP1_Efficiency_IPC6_TEMPO_OPENSTACKS_17_RESTART_dae-sm_STATIC_.pdf}}
+% \end{center}
+% \caption{Efficiency distributions of 11 runs of \DAEYAHSP\ relative to the population size, on \ELEVATORS-12 and \OPENSTACKS-17, using 48 cores.}
+% \label{fig:efficiency_pop}
+%\end{figure}
+
 \begin{figure}[htpb]
- \begin{center}
- \subfigure[\ELEVATORS-12]{\includegraphics[width=0.23\textwidth]{images/EXP1_Efficiency_IPC6_SEQ_ELEVATORS_12_RESTART_dae-sm_STATIC_.pdf}}
- \hfill
- \subfigure[\OPENSTACKS-17]{\includegraphics[width=0.23\textwidth]{images/EXP1_Efficiency_IPC6_TEMPO_OPENSTACKS_17_RESTART_dae-sm_STATIC_.pdf}}
- \end{center}
- \caption{Efficiency distributions of 11 runs of \DAEYAHSP\ relative to the population size, on the both sequential \ELEVATORS-12 and temporal \OPENSTACKS-17 problems, using 48 processors.}
- \label{fig:efficiency_pop}
+\begin{center}
+\includegraphics[width=0.5\textwidth]{images/EXP1_Efficiency_IPC6_SEQ_ELEVATORS_12_RESTART_dae-sm_STATIC_.pdf}
+\caption{Efficiency distributions of 11 runs of \DAEYAHSP\ relative to the population size, on \ELEVATORS-12, using 48 cores.}
+\label{fig:efficiency_pop_elevator_12}\end{center}
+\end{figure}
+
+
+\begin{figure}[htpb]
+\begin{center}
+\includegraphics[width=0.5\textwidth]{images/EXP1_Efficiency_IPC6_TEMPO_OPENSTACKS_17_RESTART_dae-sm_STATIC_.pdf}
+\end{center}
+\caption{Efficiency distributions of 11 runs of \DAEYAHSP\ relative to the population size, on \OPENSTACKS-17, using 48 cores.}
+\label{fig:efficiency_pop_openstacks_17}
 \end{figure}
 
 
@@ -727,7 +743,7 @@ population size is small.
  \hfill
  \subfigure[\OPENSTACKS-17]{\includegraphics[width=0.23\textwidth]{images/EXP1_Speedup_IPC6_TEMPO_OPENSTACKS_17_RESTART_dae-sm_STATIC_.pdf}}
  \end{center}
- \caption{Speedup distributions of 11 runs of \DAEYAHSP\ relative to the population size, on the both sequential \ELEVATORS-12 and temporal \OPENSTACKS-17 problems, using 48 processors.}
+ \caption{Speedup distributions of 11 runs of \DAEYAHSP\ relative to the population size, on \ELEVATORS-12 and \OPENSTACKS-17, using 48 cores.}
  \label{fig:speedup_pop}
 \end{figure}
 
