--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -737,17 +737,18 @@ population size is small.
 \end{figure}
 
 
-\begin{figure}[htpb]
- \begin{center}
- \subfigure[\ELEVATORS-12]{\includegraphics[width=0.23\textwidth]{images/EXP1_Speedup_IPC6_SEQ_ELEVATORS_12_RESTART_dae-sm_STATIC_.pdf}}
- \hfill
- \subfigure[\OPENSTACKS-17]{\includegraphics[width=0.23\textwidth]{images/EXP1_Speedup_IPC6_TEMPO_OPENSTACKS_17_RESTART_dae-sm_STATIC_.pdf}}
- \end{center}
- \caption{Speedup distributions of 11 runs of \DAEYAHSP\ relative to the population size, on \ELEVATORS-12 and \OPENSTACKS-17, using 48 cores.}
- \label{fig:speedup_pop}
-\end{figure}
+% \begin{figure}[htpb]
+%  \begin{center}
+%  \subfigure[\ELEVATORS-12]{\includegraphics[width=0.23\textwidth]{images/EXP1_Speedup_IPC6_SEQ_ELEVATORS_12_RESTART_dae-sm_STATIC_.pdf}}
+%  \hfill
+%  \subfigure[\OPENSTACKS-17]{\includegraphics[width=0.23\textwidth]{images/EXP1_Speedup_IPC6_TEMPO_OPENSTACKS_17_RESTART_dae-sm_STATIC_.pdf}}
+%  \end{center}
+%  \caption{Speedup distributions of 11 runs of \DAEYAHSP\ relative to the population size, on \ELEVATORS-12 and \OPENSTACKS-17, using 48 cores.}
+%  \label{fig:speedup_pop}
+% \end{figure}
 
-Figure \ref{fig:speedup_pop} shows that an average speedup of $40$ is met, and that it decreases with the population size. 
+% to replace by a description of efficiency
+% Figure \ref{fig:speedup_pop} shows that an average speedup of $40$ is met, and that it decreases with the population size. 
 The speedup is measured with the operating system {\tt time} command which gives the percentage of the CPU that the process being timed got\footnote{computed as (Total number of CPU-seconds that the process spent in user mode + Total number of CPU-seconds that the process spent in kernel mode) / Wall clock time.}.
 For instance 3182\% means a speedup of 31.82.
 
